feat: done all functions